# gold-Replit

./: requirements.rtf
WebhookProcessor/: README.md  advanced_market_analysis.py  api.py  api_main.py  app_fastapi.py  clean_fastapi.py  clean_start.py  combined_analysis.py  fastapi_app.py  fastapi_main.py  fastapi_server.py  final_solution.py  flask_app.py  fred_data_utils.py  fresh_api.py  fresh_fastapi_main.py  futures_api.py  futures_market_api.py  gold_futures_curve.py  improved_market_data_utils.py  launch_futures_api.py  macroeconomic_indicators.py  main.py  main_fastapi.py  market_api.py  market_data.py  market_data_utils.py  models.py  pyproject.toml  replit.nix  requirements.txt  run_api.py  run_clean.py  run_direct_fastapi.py  run_fastapi.sh  run_fastapi_direct.py  run_fresh.py  run_futures_market_api.py  run_market_api.py  simple_fastapi.py  (+8 more)
WebhookProcessor/attached_assets/: Pasted-from-fastapi-import-FastAPI-HTTPException-from-pydantic-import-BaseModel-import-yfinance-as-yf-app-1744695453644.txt  Pasted-main-py-Paste-this-into-a-new-file-called-main-py-python-Copy-Edit-from-fastapi-import-FastAPI-fro-1744693910173.txt
WebhookProcessor/static/css/: custom.css
WebhookProcessor/static/js/: script.js
WebhookProcessor/templates/: advanced_gold_analysis.html  base.html  documentation.html  economic_outlook.html  gold_analysis.html  gold_cycle.html  gold_futures_curve.html  index.html  market_data.html  market_sentiment.html
